Fix main page background and layout issues, Add cropped background image

--- a/src/App.css
+++ b/src/App.css
@@ -71,15 +71,20 @@ nav {
   clip-path: inset(0 137px 0 0);
 }
 #title {
-  margin-top: 24px;
+  margin: 24px 0 0 0;
   font-size: 61.16px; color: white; 
 }
 #subtitle {
   margin-top: 16px;
   font-size: 24.26px;  color: white;
+  line-height: 35.23px;
 }
 #main_bg {
-  clip-path: inset(0 116px 0 116px);
-  object-fit: fill;
+  /*clip-path: inset(0 116px 0 116px);*/
+  /*object-fit: fill;*/
   z-index: -1;
+  background-image: linear-gradient(rgba(34, 34, 34, 0.5), rgba(34, 34, 34, 0.5)), url('/public/bold/main_bg.png');
+  width: 100%;
+  height: 944px;
+  background-size: cover;
 }
